feat: (back) endpoint to get user upgrades
